--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,6 +21,9 @@ jobs:
         with:
           bun-version: latest
 
+      - name: Install dependencies
+        run: bun install
+
       - run: bun publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
