--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,7 +24,9 @@ jobs:
       - name: Install dependencies
         run: bun install
 
-      - run: bun publish
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+
+      - run: npm publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_CONFIG_TOKEN: ${{ secrets.GITHUB_TOKEN }}
