--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@miyamo2/gatsby-source-blogapi-miyamo-today",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "repository": {
     "type": "git",
     "url": "https://github.com/miyamo2/gatsby-source-blogapi-miyamo-today.git"
@@ -28,7 +28,6 @@
     "@graphql-codegen/typescript-graphql-request": "^6.2.0",
     "gatsby": "^5.14.1",
     "gatsby-source-filesystem": "^5.14.0",
-    "graphql": "16.9.0",
-    "graphql-request": "^7.1.2"
+    "graphql": "16.9.0"
   }
 }
