--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,8 +20,6 @@ jobs:
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.2.1
-          registry-url: 'https://npm.pkg.github.com/'
-          scope: '@miyamo2'
 
       - name: Install dependencies
         run: bun install
@@ -29,4 +27,4 @@ jobs:
       - name: Bun Publish
         run: bun publish
         env:
-          BUN_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
